# Transcript_Parser

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  gitattributes  pre-commit-config.yaml  pyproject.toml  transcript_parser_py.toml
.github/CODEOWNERS/: CODEOWNERS
.github/workflows/: ci.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
src/transcript_parser/: __main__.py  cli.py  debug_dump.py  parse_transcript.py
tests/: conftest.py  smoke_cli_test.py  test_cli.py
tools/: debug_dump.py
