[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript_parser"
version = "0.1.0"
description = "Transcript parsing utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "ruff",
    "isort",
    "mypy",
    "autoflake",
    "reportlab",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
# Silence noisy third‑party deprecation warnings so smoke tests stay readable.
# These are from external libs (protobuf, paddle/paddlex, astor) and not in our code.
filterwarnings = [
  'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated.*:DeprecationWarning:google\.protobuf',
  'ignore:Call to deprecated create function .*:DeprecationWarning:paddle\..*',
  'ignore:Call to deprecated create function .*:DeprecationWarning:paddle\.base\.proto\..*',
  'ignore:ast\.Num is deprecated.*:DeprecationWarning:astor\.op_util',
]
