[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript_parser"
version = "0.5.5"
description = "Transcript parsing utilities (pdfplumber-first, PaddleOCR fallback built-in)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.9.0",
    "pdf2image>=1.17.0",
    "reportlab>=4.1.0",
    "numpy<2",
    "opencv-python-headless",
    "paddlepaddle==2.6.1",
    "paddleocr>=2.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pre-commit>=3.7",
    "black==24.8.0",
    "ruff>=0.5.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "autoflake>=2.3.1"
]

[project.scripts]
transcript-parser = "transcript_parser.parse_transcript:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py311","py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["transcript_parser*"]
